minor fix + montecarlo grCUDA template